--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#203ddc</color>
     <color name="black">#111111</color>
     <color name="red">#ff0000</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#cccccc</color>
 </resources>
